[project]
name = "imagertk"
version = "0.1.0"
description = ""
authors = [
    {name = "Rongting Huang",email = "rthuang@stanford.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = ["deepcell (>=0.12.10,<0.13.0)", "tqdm (>=4.67.1,<5.0.0)", "opencv-python (>=4.11.0.86,<4.12)", "geopandas (>=1.1.1,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
